[package]
name = "poopy_snake_wasm"
version = "0.1.0"
edition = "2021"
target-arch = "wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
lol_alloc = "0.3.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"